--- a/.github/workflows/executando_docker_run.yml
+++ b/.github/workflows/executando_docker_run.yml
@@ -1,21 +1,30 @@
-name: Trabalho da disciplina de praticas DevOps
+# This is a basic workflow to help you get started with Actions
 
+name: Unifametro-praticas-devops
+
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
-  # Permite que você execute este fluxo de trabalho manualmente
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains a single job called "build"
   build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    
-    steps:
-      # Fazer o check-out do seu repositório
-      - uses: actions/checkout@v3
 
-      - name: Push da imagem do docker para o 2º trabalho da disciplina de praticas DevOps do curso de POS da Unifametro 
-        run: docker run docker/whalesay comsay Iuri Petrola
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+      
+      # Unifametro 
+      - name: Trabalho Iuri Petrola
+        run: docker run docker/whalesay cowsay Iuri_Petrola
